[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "html-calendar"
authors = [{name = "Jorge Monforte Gonzalez", email = "yo@llou.net"}]
readme = "README.rst"
dynamic = ["version", "description"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Environment :: Web Environment",
	"License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3"
]

[project.urls]
Home = "https://github.com/llou/html-calendar"
Documentation = "https://html-calendar.readthedocs.io/en/latest/"

[tool.flit.module]
name  = "htmlcalendar"
